# https://pip.pypa.io/en/stable/reference/build-system/pyproject-toml/
[build-system]
requires = ["setuptools>=77.0"]
build-backend = "setuptools.build_meta"

[project]
name = "courlan"
description = "Clean, filter and sample URLs to optimize data collection – includes spam, content type and language filters."
readme = "README.md"
license = "Apache-2.0"
dynamic = ["version"]
requires-python = ">=3.10"
authors = [
  {name = "Adrien Barbaresi"}
]
keywords=[
    "cleaner",
    "crawler",
    "uri",
    "url-parsing",
    "url-manipulation",
    "urls",
    "validation",
    "webcrawling",
]
classifiers = [
    # As from http://pypi.python.org/pypi?%3Aaction=list_classifiers
    'Development Status :: 5 - Production/Stable',
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Security",
    "Topic :: Text Processing :: Filters",
    "Topic :: Text Processing :: Linguistic",
    "Typing :: Typed",
]
dependencies = [
    "tld >= 0.13",
    "urllib3 >= 1.26, < 3",
]

# https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html
[tool.setuptools]
packages = ["courlan"]

# https://packaging.python.org/en/latest/guides/single-sourcing-package-version/
[tool.setuptools.dynamic]
version = {attr = "courlan.__version__"}

[project.scripts]
courlan = "courlan.cli:main"

[project.urls]
"Homepage" = "https://github.com/adbar/courlan"
"Blog" = "https://adrien.barbaresi.eu/blog/"  # /tag/courlan.html
"Tracker" = "https://github.com/adbar/courlan/issues"

# Development extras
[project.optional-dependencies]
dev = [
    "ruff==0.15.15",
    "mypy==2.1.0",
    "pytest==9.0.3",
    "pytest-cov==7.1.0",
    "pytest-httpserver==1.1.5",
]

[tool.pytest.ini_options]
testpaths = "tests/*test*.py"

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
# ruff defaults (E4, E7, E9, F) plus import sorting (I),
# pyupgrade (UP) and bugbear (B)
extend-select = ["I", "UP", "B"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
pretty = true
warn_unused_ignores = true
warn_redundant_casts = true

# https://coverage.readthedocs.io/en/latest/config.html
[tool.coverage.run]
branch = true
source = ["courlan"]
omit = ["tests/*", "setup.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "ImportError:",
]
